--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,41 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
-
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<!doctype html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>B2 Symfony 2021-2022 - Clément LO-CASCIO</title>
+    <link rel="stylesheet" href="{{ asset('assets/css/responsive.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/header.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/society.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/title.css') }}">
+</head>
+<body>
+    <header class="xLarge-12 large-12 medium-12 small-12 xSmall-12">
+        <nav>
+            <ul class="ul-NavBar">
+                <section class="row wrap">
+                    <div class="xLarge-3 large-3 medium-12 small-12 xSmall-12">
+                        <div class="margin-arround column">
+                            <li><img class="logo" src="{{ asset('assets/media/img/LogoV2.png') }}" alt="Logo" /></li>
+                        </div>
+                    </div>
+                    <div class="xLarge-9 large-9 medium-12 small-12 xSmall-12">
+                        <div class="margin-arround row">
+                            {% for category in categories %}
+                                <li class="li-NavBar"><a href="{{ path('readAllSociety', {'id':category.id}) }}">{{ category.name }}</a></li>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </section>
+            </ul>
+        </nav>
+    </header>
+    <main class="xLarge-12 large-12 medium-12 small-12 xSmall-12">
+        {% block title %} {% endblock %}
+        {% block content %} {% endblock %}
+    </main>
+</body>
 </html>
