--- a/templates/Society/readOne.html.twig
+++ b/templates/Society/readOne.html.twig
@@ -1,35 +1,55 @@
 {% extends "base.html.twig" %}
 
-
-{% block title %}
-    <section class="row wrap ">
-        <div class="xLarge-12 large-12 medium-12 small-12 xSmall-12 ">
-            <div class="pad-arround column content-title white ">
-                <h2>Accueil</h2>
-                <p>Vous vous trouvez sur la page principale. Cette page contient la liste de toutes les sociétés référencés sur cette annuaire.</p>
-            </div>
-        </div>
-    </section>
-{% endblock %}
-
 {% block content %}
     <section class="row wrap white">
         <div class="xLarge-5 large-5 medium-12 small-12 xSmall-12">
-            <div class="margin-arround row ">
-                <div class="card-product">
+            <div class="margin-arround column ">
+                <div class="card-product ">
                     <img src="{{ asset(society.img) }}">
                 </div>
             </div>
         </div>
         <div class="xLarge-7 large-7 medium-12 small-12 xSmall-12">
             <div class="margin-arround">
-                <div class="">
-                    <h2>{{ society.name }}</h2>
+                <div class="content-title">
+                    <h1>{{ society.name }}</h1>
                     <h3>Catégorie: <a href="{{ path('readOneSociety', {'name':society.name}) }}">{{ society.category.name }}</a></h3>
                     <h3>Crée le: {{ society.createdat|date('d m Y')  }}</h3>
+                    <span>{{ society.description }}</span>
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="row wrap white">
+        <div class="margin-arround row">
+            <img src="{{ asset('assets/media/img/scroll.png') }}" onclick="window.history.back();" width="50px" height="50px" style="transform: rotate(90deg);">
+            <h2>Revenir en arrière</h2>
+        </div>
+        <div class="margin-arround row">
+            <h2>Autres sociétés ....</h2>
+        </div>
+    </section>
+
+    <section class="row wrap white">
+
+        {% for element in randomsocieties %}
+
+            <div class="xLarge-6 large-6 medium-12 small-12 xSmall-12">
+                <div class="margin-arround column">
+                    <div class="card-product width-75">
+                        <img src="{{ asset(element.img) }}" alt="{{ element.name }}" width="75%">
+                        <div class="container-product">
+                            <h2><a href="{{ path('readOneSociety', {'name':element.name}) }}">{{ element.name }}</a></h2>
+                            <h3>Catégorie: <a href="{{ path('readOneSociety', {'name':element.category.name}) }}">{{ element.category.name }}</a></h3>
+                            <h3>Crée le: {{ element.createdat|date('d m Y')  }}</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        {% endfor %}
+
 
     </section>
 {% endblock %}
