--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,11 @@
                 <section class="row wrap">
                     <div class="xLarge-3 large-3 medium-12 small-12 xSmall-12">
                         <div class="margin-arround column">
-                            <li><img class="logo" src="{{ asset('assets/media/img/LogoV2.png') }}" alt="Logo" /></li>
+                            <li>
+                                <a href="{{ asset('http://localhost/mini-annuaire-professionnel/public') }}">
+                                    <img class="logo" src="{{ asset('assets/media/img/LogoV2.png') }}" alt="Logo" />
+                                </a>
+                            </li>
                         </div>
                     </div>
                     <div class="xLarge-9 large-9 medium-12 small-12 xSmall-12">
