--- a/templates/Society/readOne.html.twig
+++ b/templates/Society/readOne.html.twig
@@ -13,7 +13,9 @@
             <div class="margin-arround">
                 <div class="content-title">
                     <h1>{{ society.name }}</h1>
-                    <h3>Catégorie: <a href="{{ path('readOneSociety', {'name':society.name}) }}">{{ society.category.name }}</a></h3>
+                    {% if society.category.name is defined %}
+                        <h3>Catégorie: <a href="{{ path('readOneCategory', {'name':society.category.name}) }}">{{ society.category.name }}</a></h3>
+                    {% endif %}
                     <h3>Crée le: {{ society.createdat|date('d m Y')  }}</h3>
                     <span>{{ society.description }}</span>
                 </div>
