--- a/templates/Society/readOne.html.twig
+++ b/templates/Society/readOne.html.twig
@@ -16,7 +16,7 @@
                     {% if society.category.name is defined %}
                         <h3>Catégorie: <a href="{{ path('readOneCategory', {'name':society.category.name}) }}">{{ society.category.name }}</a></h3>
                     {% endif %}
-                    <h3>Crée le: {{ society.createdat|date('d m Y')  }}</h3>
+                    <h3>Crée le: {{ society.createdat|date('l d/m/Y à H:i:s') }}</h3>
                     <span>{{ society.description }}</span>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                         <div class="container-product">
                             <h2><a href="{{ path('readOneSociety', {'name':element.name}) }}">{{ element.name }}</a></h2>
                             <h3>Catégorie: <a href="{{ path('readOneSociety', {'name':element.category.name}) }}">{{ element.category.name }}</a></h3>
-                            <h3>Crée le: {{ element.createdat|date('d m Y')  }}</h3>
+                            <h3>Crée le: {{ element.createdat|date('l d/m/Y à H:i:s') }}</h3>
                         </div>
                     </div>
                 </div>
