Modification du champ Img en Picture sur la classe Society

--- a/templates/Category/readOne.html.twig
+++ b/templates/Category/readOne.html.twig
@@ -28,7 +28,7 @@
                 <div class="xLarge-5 large-5 medium-12 small-12 xSmall-12">
                     <div class="margin-arround row ">
                         <div class="card-product">
-                            <img src="{{ asset(society.img) }}">
+                            <img src="{{ asset(society.picture) }}">
                         </div>
                     </div>
                 </div>
