Ajout du formulaire de création d'une société & de l'upload automatique d'une image

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/css/society.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/css/title.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/css/form.css') }}">
+
 </head>
 <body>
     <header class="xLarge-12 large-12 medium-12 small-12 xSmall-12">
