--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,6 +42,7 @@
         </nav>
     </header>
     <main class="xLarge-12 large-12 medium-12 small-12 xSmall-12">
+        {% block success %} {% endblock %}
         {% block error %} {% endblock %}
         {% block title %} {% endblock %}
         {% block content %} {% endblock %}
