--- a/templates/Society/readAll.html.twig
+++ b/templates/Society/readAll.html.twig
@@ -21,14 +21,24 @@
 {% endblock %}
 
 {% block title %}
-    <section class="row wrap ">
-        <div class="xLarge-12 large-12 medium-12 small-12 xSmall-12">
-            <div class="pad-arround column content-title white ">
-                <h2>Accueil</h2>
-                <p>Vous vous trouvez sur la page principale. Cette page contient la liste de toutes les sociétés référencés sur cette annuaire.</p>
+    {% if societies is defined %}
+        <section class="row wrap ">
+            <div class="xLarge-12 large-12 medium-12 small-12 xSmall-12">
+                <div class="pad-arround column content-title white ">
+                    <h2>Accueil</h2>
+                    <p>Vous vous trouvez sur la page principale. Cette page contient la liste de toutes les sociétés référencés sur cette annuaire.</p>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    {% else %}
+        <section class="row wrap">
+            <div class="xLarge-12 large-12 medium-12 small-12 xSmall-12">
+                <div class="pad-arround column content-title white center">
+                    <h2>Aucune résultat n'à été trouvé en BDD</h2>
+                </div>
+            </div>
+        </section>
+    {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -41,7 +51,7 @@
                 <div class="xLarge-5 large-5 medium-12 small-12 xSmall-12">
                     <div class="margin-arround row ">
                         <div class="card-product">
-                            {% if society.picture is not null %}
+                            {% if society.picture is defined %}
                                 <img src="{{ asset(society.picture) }}">
                             {% endif %}
                         </div>
@@ -54,11 +64,16 @@
                             {% if society.category.name is defined %}
                                 <h3>Catégorie: <a href="{{ path('readOneCategory', {'name':society.category.name}) }}">{{ society.category.name }}</a></h3>
                             {% endif %}
-                            <h3>Crée le: {{ society.createdat|date('l d/m/Y à H:i:s') }}</h3>
+                            {% if society.createdat is defined %}
+                                <h3>Crée le: {{ society.createdat|date('l d/m/Y à H:i:s') }}</h3>
+                            {% endif %}
+                            <a href="{{ path('updateSociety', {'name':society.name}) }}">Editer</a>
+                            <a href="{{ path('deleteSociety', {'name':society.name}) }}">Supprimer</a>
                         </div>
                     </div>
                 </div>
             {% endfor %}
+
         {% endif %}
 
     </section>
